<resources>
    <string name="app_name">HTI</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="requests">Requests</string>
    <string name="more">More</string>
    <string name="edit">Edit</string>
    <string name="gpa">GPA</string>
    <string name="units">Units</string>
    <string name="year">Year</string>
    <string name="id">ID:</string>
    <string name="email">Email:</string>
    <string name="graduated">Graduated:</string>
    <string name="mobile">Mobile:</string>
    <string name="change_picture">Change Picture</string>
    <string name="arabic_name">Arabic Name</string>
    <string name="english_name">English Name</string>
    <string name="arabic_name_hint">Arabic Name</string>
    <string name="english_name_hint">English Name</string>
    <string name="email_hint">Email</string>
    <string name="mobile_hint">Mobile</string>
    <string name="retype_your_new_password">Retype Your New Password</string>
    <string name="type_your_new_password">Type Your New Password</string>
    <string name="type_your_current_password">Type Your Current Password</string>
    <string name="confirm_your_new_password">Confirm Your New Password</string>
    <string name="your_new_password">Your New Password</string>
    <string name="your_current_password">Your Current Password</string>
    <string name="certificate">Certificate</string>
    <string name="test">Test</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="reply">Reply</string>
    <string name="yes">Yes</string>
    <string name="reply_to">Reply To:</string>
    <string name="type_your_reply_here">Type your reply here..</string>
    <string name="send">Send</string>
    <string name="type_you_reply_here">Type you Reply here..</string>
    <string name="necessary_request">Necessary Request</string>
    <string name="you_must_pay_first">You must pay at CIB before you can request</string>
    <string name="name_in_english">Student English Name:</string>
    <string name="name_in_arabic">Student Arabic Name:</string>
    <string name="department">Department:</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="notice_bring_with_you6_photos_4_6_white_background">* Notice: Bring with you 6 photos 4 * 6 (white Background)</string>
    <string name="send_request">Send Request</string>
    <string name="thank_you">Thank you</string>
    <string name="request_sent">Your request has been sent successfully</string>
    <string name="your_verify_sent">Your verification message to change your Password has been sent to Email: ID@hti.edu.eg. Please check your Email inbox.</string>
    <string name="attention">Attention!</string>
    <string name="computer_science">Computer Science</string>
    <string name="thank">Thank You</string>
    <string name="message_sent">Your message has been sent to Application Technical Support Team. We will notify you when they answer.</string>
    <string name="hti_message_sent">Your message has been sent to HTI Support. We will notify you when they answer.</string>
    <string name="request_number">Request Number:</string>
    <string name="description">Request Description:</string>
    <string name="reqdesc">reqDesc</string>
    <string name="status">Status:</string>
    <string name="reqstatus">reqStatus</string>
    <string name="tutorials_item">Tutorials Item</string>
    <string name="help">Help</string>
    <string name="success">Success!</string>
    <string name="successfully_sent">Your request with number 188148 has been sent successfully. We will notify you how and when you can receive it.</string>
    <string name="r_successfully_sent">Your request with number 188148 has been sent successfully. Go to My Requests screen to check your request status.</string>
    <string name="request_information">Request Information:</string>
    <string name="please_enter_your_educational_email_id_hti_edu_eg_if_you_graduated_enter_the_email_which_you_verified_and_please_check_your_email">Please enter your educational email (ID@hti.edu.eg), if you graduated enter the email which you verified and please check your email.</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="higher_technological_institute">Higher Technological Institute</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="eg">EG</string>
    <string name="name">Name:</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="count">Count</string>
    <string name="plz_fill">Please fill the text field of the count at least 1 copy and press total price button to know the money you will pay in CIB account</string>
    <string name="count_">Count:</string>
    <string name="time">Time:</string>
    <string name="reqprice">Price:</string>
    <string name="menu">Menu</string>
    <string name="search_for_request">Search For Request</string>
    <string name="accepted_requests">Accepted Requests</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="rejected_requests">Rejected Requests</string>
    <string name="delivered_requests">Delivered Requests</string>
    <string name="requests_numbers">Requests Numbers:</string>
    <string name="type_request_number">Type Request Number..</string>
    <string name="request_count">Request Count:</string>
    <string name="request_price">Request Price:</string>
    <string name="request_total_price">Request Total Price:</string>
    <string name="student_email">Student Email:</string>
    <string name="money_confirmation">Money Confirmation:</string>
    <string name="student_status">Student Status:</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="supervisor_name">Supervisor Name</string>
    <string name="logout">Logout</string>
    <string name="idlogin">ID</string>
    <string name="example_42017047">Example: 42017047</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="went_wrong">Something went wrong, please check your data</string>
    <string name="please_id">Please enter your id</string>
    <string name="please_password">Please enter your password</string>
    <string name="please_send_id">Please send your ID to (info@hti.edu.eg), your password will be sent within 24 work hours after sending your email.</string>
    <string name="ok">Ok</string>
    <string name="send_email">Send Email</string>
    <string name="date">Date:</string>
    <string name="request_page">Requests Page</string>
    <string name="how_can_i_make_a_request">How can i make a request?</string>
    <string name="profile_page">Profile Page</string>
    <string name="my_requests">My Requests</string>
    <string name="printout">Printout</string>
    <string name="proposal">Registration Proposal</string>
    <string name="my_results">My Results</string>
    <string name="test_yourself">Test Yourself</string>
    <string name="tutorials">Tutorials Page</string>
    <string name="faqs_and_support">FAQs and Support</string>
    <string name="about_hti">About HTI</string>
    <string name="settings">Settings</string>
    <string name="events_page">Events Page</string>
    <string name="news_page">News Page</string>
    <string name="general_info">General Info:</string>
    <string name="phonep">Phone:</string>
    <string name="statusp">Status:</string>
    <string name="idp">ID:</string>
    <string name="request_informationf">Request Information</string>
    <string name="cib_account">CIB Account: 100011938528. Did you pay and have the Receipt?</string>
    <string name="no">No</string>
    <string name="r_description">R. Description:</string>
    <string name="r_count">R. Count:</string>
    <string name="r_total_price">R. Total Price:</string>
    <string name="hint_you_must_deliver_6_photos_with_4_6_size_to_the_institute_and_come_by_yourself_to_receive_your_certificate">*Hint: You must deliver 6 photos with 4*6 size to the institute and come by yourself to receive your certificate.</string>
    <string name="student_information">Student Information:</string>
    <string name="idc">ID:</string>
    <string name="statusc">Status:</string>
    <string name="upload_the_receipt">Upload The Receipt</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_request">Confirm Your Request</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="yrequest_number">Your request with number \"</string>
    <string name="succes_done">\" has been sent successfully. Go to My Requests screen to check your request status.</string>
    <string name="editing_profile">Editing Profile</string>
    <string name="important_hints">- Important Hints:</string>
    <string name="_1_your_english_name_must_be_the_same_name_in_the_passport">1- Your English name must be the same name in the passport.</string>
    <string name="_2_your_arabic_name_must_be_quadrant">2- Your Arabic name must be Quadrant.</string>
    <string name="_3_if_you_are_graduated_then_you_can_change_your_email">3- If you are graduated, then you can change your email.</string>
    <string name="_4_input_an_available_phone_number_of_yours">4- Input an available phone number of yours.</string>
    <string name="_5_your_name_email_and_phone_are_used_in_requests_information">5- Your name, email, and phone are used in Requests information.</string>
    <string name="arabic_namep">*Arabic Name</string>
    <string name="english_namep">*English Name</string>
    <string name="emailp">*Email</string>
    <string name="phonee">*Phone</string>
    <string name="save">Save</string>
    <string name="my_requests_page">My Requests Page</string>
    <string name="n">N</string>
    <string name="code">Code</string>
    <string name="subject">Subject</string>
    <string name="group">Group</string>
    <string name="nump">N</string>
    <string name="scodep">S.Code</string>
    <string name="snamep">S.Name</string>
    <string name="sgroupp">S.Group</string>
    <string name="sunitp">S.Units</string>
    <string name="allowed_units">Allowed Units</string>
    <string name="total_units">Total Units</string>
    <string name="registration_proposal_depends_on_subjects_that_you_had_already_finished">* Registration Proposal depends on subjects that you had already finished.</string>
    <string name="go_to_registration_page">Go to Registration Page</string>
    <string name="f2t4">From 2.0 to 4.0</string>
    <string name="f15t2">From 1.5 to 2.0</string>
    <string name="f1t15">From 1.0 to 1.5</string>
    <string name="f5t1">From 0.5 to 1.0</string>
    <string name="lt5">Lower than 0.5</string>
    <string name="this_table_shows_relation_between_gpa_and_allowed_units_you_can_register">This table shows relation between GPA and Allowed Units you can register.</string>
    <string name="sgrade">Grade</string>
    <string name="class_year">Class Year</string>
    <string name="trueq">True</string>
    <string name="falseq">False</string>
    <string name="faqss">FAQs</string>
    <string name="support">Support</string>
    <string name="type_your_questions_here">Type your questions here..</string>
    <string name="htisupport">HTI Support</string>
    <string name="hti_information">HTI Information:</string>
    <string name="dean">Dean:</string>
    <string name="please_explain_in_details_the_reasons_of_rejection_of_the_student_s_request">- Please, explain in details the reasons of rejection of the student\'s request.</string>
    <string name="type_the_rejection_reasons_here">Type the rejection reasons here..</string>
    <string name="loginlang">العربية</string>
</resources>