<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.EditPasswordActivity">
    <include
        android:id="@+id/header"
        layout="@layout/main_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCurrentPass"
        android:text="@string/your_current_password"
        android:textSize="16dp"
        android:textColor="@color/light_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/etCurrentPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        android:textSize="12dp"
        android:hint="@string/type_your_current_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentPass"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNewPass"
        android:text="@string/your_new_password"
        android:textSize="16dp"
        android:textColor="@color/light_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCurrentPass"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/etNewPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        android:textSize="12dp"
        android:hint="@string/type_your_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewPass"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvConfirmPass"
        android:text="@string/confirm_your_new_password"
        android:textSize="16dp"
        android:textColor="@color/light_black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNewPass"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>

    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        android:textSize="12dp"
        android:hint="@string/retype_your_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmPass"
        app:layout_constraintEnd_toEndOf="parent"/>

    <carbon.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buSave"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:text="Save"
        android:textStyle="bold"
        android:background="@color/dark_blue"
        android:textColor="@color/white"
        app:carbon_cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etConfirmPass" />

</androidx.constraintlayout.widget.ConstraintLayout>