<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".activities.LoginScreen">

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLogin"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clLogin">

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/help"
        android:textStyle="bold"
        android:textColor="@color/light_black"
        android:textSize="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/lang"
        android:text = "@string/loginlang"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="@color/light_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingEnd="5dp"
        android:paddingStart="15dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/htiLogo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/tvID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelp"
        android:layout_marginTop="5sp"
        app:srcCompat="@drawable/htilogo" />

    <TextView
        android:id="@+id/tvID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idlogin"
        android:textColor="@color/light_black"
        android:textSize="15dp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/etID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/htiLogo"
    />

    <EditText
        android:id="@+id/etID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:padding="8dp"
        android:textColorHint="@color/light_black"
        android:layout_marginTop="4dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/example_42017047"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvID"
        />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/light_black"
        android:textSize="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etID"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:padding="8dp"
        android:textColorHint="@color/light_black"
        android:layout_marginTop="4dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/dark_blue"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        />

    <carbon.widget.Button
        android:id="@+id/buLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12sp"
        app:carbon_cornerRadius="25dp"
        app:carbon_elevation="8dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12.5sp"
        app:layout_constraintBottom_toTopOf="@id/tvForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textColor="@color/light_black"
        android:textSize="15dp"
        android:layout_marginTop="27sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buLogin"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.scorpion_a.studentapp.utils.TypeWriter
        android:id="@+id/tvHTI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_blue"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="9sp"
        app:layout_constraintTop_toBottomOf="@id/tvForgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <CheckBox
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:textColor="@color/light_black"
        android:theme="@style/SCBSwitch"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="12.5sp"
        app:layout_constraintBottom_toTopOf="@id/buLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>