<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.AppTechSupportActivity">
    <include
        android:id="@+id/header"
        layout="@layout/main_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTypeRejectReasons"
        android:text="@string/please_explain_in_details_the_reasons_of_rejection_of_the_student_s_request"
        android:textColor="@color/light_black"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMessage"
        android:hint="@string/type_the_rejection_reasons_here"
        android:textColorHint="@color/light_black"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:ems="14"
        android:textSize="16dp"
        android:textColor="@color/light_black"
        android:padding="8dp"
        android:minLines="10"
        android:maxLines="16"
        android:scrollbars="vertical"
        android:background="@drawable/roundedcorner2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTypeRejectReasons"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"/>

    <carbon.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buConfirmRejection"
        android:background="@color/dark_blue"
        android:text="@string/reject"
        android:textColor="@color/white"
        app:carbon_cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMessage"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>