<?xml version="1.0" encoding="utf-8"?>
<carbon.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    app:carbon_cornerRadius="15dp"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvtitle"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16dp"
        android:textColor="@color/light_black"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_educational_email_id_hti_edu_eg_if_you_graduated_enter_the_email_which_you_verified_and_please_check_your_email"
       app:layout_constraintTop_toBottomOf="@+id/tvtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:textColor="@color/light_black"
        android:textSize="14dp"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/please_enter_your_email"
        android:inputType="textPersonName"
        android:textColor="@color/dark_blue"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvtext"
        />
    <carbon.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buSend"
        android:background="@color/dark_blue"
        android:text="@string/send"
        android:textColor="@color/white"
        app:carbon_cornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>
</carbon.widget.ConstraintLayout>